# word-clock-rust

./: .gdbinit  .gitmodules  Cargo.toml  TODO  memory.x  openocd.cfg
src/: .main.rs.swp  brightness.rs  cli.rs  dcf77.rs  display.rs  main.rs
